		Apply Sweave2knitr() to gap.Rnw and jss.Rnw and change gap.Rnw to gap.Rmd
shiygap		Add inst/shinygap and therefore runshinygap
		Create R/global.R containing revised functions so it does not rely on R/gap
		Make the first argument of sn() inside fbsize() as list() so as to handle vector input
R		Rename h2 to h2_mzdz to resolve conflict with shiny/htmltools
		Document logp(), log10p(), log10pvalue(), pqtl2dplot(), pvalue(), h2G(), h2GE(), h2l()
		Rename mhtplot2d/3d as pqtl2dplot/3dplotly, 3d version as run3d() and use .csv
		Imports: dplyr, ggplot2, plotly
		Suggests: htmlwidgets, rmarkdown
		Drop strlen() since nchar() is ready to use
		Add allDuplicated and export grid2d()
		Use of qnorm(log_p-log(2),lower.tail=FALSE,log.p=TRUE) for cs() when log_p is non-NULL
04-05-2021	Documentation through roxygen and suggests knitr
24-04-2021	Enable fig=TRUE in gap.Rnw to generate figures/reduce size of the package
23-04-2021	Revise gsmr() adding legend and Egger intercept
		Add cnvplot() trunc.mhtplot, and METAL_forestplot examples to gap.Rnw

Version 1.2.3-1
21-04-2021	Remove URL from hwe.cc.Rd and http --> https in CITATION

Version 1.2.3
20-04-2021	Remove (unused) # ftp:// from asplot after suggestion
19-04-2021	Revise log10pvalue() and mhtplot.trunc() on p values
17-04-2021	Simplify pvalue()
16-04-2021	Change arguments for qnorm() and fix a swapped UCL/LCL bug in gsmr()
14-04-2021	Add log10pvalue so as to enable mhtplot.trunc() to handle p, log10p, z
11-04-2021	Rework on mhtplot.trunc() to use Z so as to handle extremely small p values
		Drop qqman from suggests
10-04-2021	Relocate description on lsf.str() as Appendix and add library(gap) in gap.Rnw
09-04-2021	Add weighted.median(), mr.boot(), gsmr() which suggests metafor, cowplot
31-03-2021	Revise ESplot to use log(OR) as effect size, activate (...) option
22-03-2021	Add example for miamiplot in gap.Rnw
12-02-2021	Revise circos.cnvplot() excluding records with start>end
11-02-2021	Revise METAL_forestplot()